<resources>
    <string name="app_name">BasicViews</string>
    <string name="txtName">Name:</string>
    <string name="txtEmail">Email:</string>
    <string name="editName" />
    <string name="editEmail" />
    <string name="txtCheckBoxTitle">Hobbies</string>
    <string name="chkReading">Reading</string>
    <string name="chkTravelling">Travelling</string>
    <string name="chkCoding">Coding</string>
    <string name="reading">Reading</string>
    <string name="travelling">Travelling</string>
    <string name="coding">Coding</string>
    <string name="rdMale">Male</string>
    <string name="rdFemale">Female</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">SEX</string>
    <string name="txtexpert">You have experience with Java framewoks</string>
    <string name="txtLan">Languages</string>
    <string name="languages">Languages</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="infomation">Infomation</string>
    <string-array name="lan_array">
        <item>VietNamese</item>
        <item>English</item>
        <item>French</item>
        <item>Chinese</item>
    </string-array>
</resources>